scss/bootstudio.scss
/* ... */
  
  @media (min-width: 992px) {
    .main-page-resource-card-img {
    }
  }
  
  @media (min-width: 768px) {
    .main-page-card.resource-card {
      width: 180px;
    }
  }
  
  @media (min-width: 768px) {
    .main-page-resource-card-img {
      height: 140px;
    }
  }
  
  @media (min-width: 1500px) {
    .main-page-resource-card-img {
      height: 200px!important;
    }
  }
  
  @media (min-width: 1500px) {
    .main-page-card.resource-card {
      width: 250px!important;
    }
  }
  
  @media (min-width: 768px) {
    .main-page-card.resource-card {
      width: 160px;
    }
  }
  
  @media (min-width: 576px) {
    .main-page-resource-card-img.no-border-radius {
      height: 160px;
    }
  }
  
  @media (min-width: 576px) {
    .main-page-card.resource-card {
      /*width: 200px;*/
    }
  }
  
  .main-page-link-wrapper:hover + .main-page-card .main-page-link {
    color: var(--secondary)!important;
    /*text-decoration: underline;*/
  }

  .main-page-link-wrapper:hover + .main-page-announcements-card-text-cont .main-page-card .main-page-announcements-title .main-page-link {
    color: var(--secondary)!important;
    /*text-decoration: underline;*/
  }
  
  .main-page-link-wrapper:hover + .main-page-card .main-page-resource-card-img {
    filter: brightness(0.9)!important;
  }
  
  .main-page-link-wrapper:hover + .card .main-page-link {
    color: var(--secondary)!important;
    //text-decoration: underline;
  }
  
  .main-page-link-wrapper:hover .main-page-link-wrapper {
    color: var(--secondary)!important;
    /*text-decoration: underline;*/
  }
  
  .main-page-resource-card-img.no-border-radius {
    object-fit: fill;
  }
  
  .main-page-members-button {
    width: 230px;
    margin: 5px;
    font-size: 18px;
    /*line-height: 18px;*/
  }
  
  .main-page-jumbo-video {
    z-index: 0;
    position: relative;
  }
  
  .main-page-jumbo-video.main-page-jumbo-sub-video {
    height: 130px;
    width: 175px;
    box-shadow: 1px 2px 3px rgba(252,248,248,0.5);
    border-radius: 5px;
    filter: brightness(0.9);
    border-color: white;
    border-style: solid;
    z-index: 1;
  }

  @media (min-width: 576px) {
    .main-page-jumbo-video.main-page-jumbo-sub-video {
      height: 150px;
    width: 200px;
    }
  }
  
  @media (min-width: 768px) {
    .main-page-jumbo-video.main-page-jumbo-sub-video {
      height: 160px;
      width: 210px;
    }
  }
  
  @media (min-width: 1200px) {
    .main-page-jumbo-video.main-page-jumbo-sub-video {
      height: 230px;
      width: 307px;
    }
  }
  
  .main-page-link-wrapper:hover{
    cursor: pointer;
  }

  .main-page-link-wrapper:hover + .main-page-jumbo-main .main-page-jumbo-video {
    filter: brightness(0.9);
  }
  
  .main-page-link-wrapper:hover + .main-page-jumbo-main .main-page-main-image {
    filter: brightness(1)!important;
  }
  
  @media (min-width: 1200px) {
    .fit-cover.main-page-course-card-img {
      height: 200px;
    }
  }
  
  .main-page-link-wrapper:hover + .main-page-announcements-card .main-page-link {
    color: var(--secondary);
    text-decoration: underline;
  }
  
  .main-page-link-wrapper:hover + .card-body .main-page-link {
    color: var(--secondary)!important;
    text-decoration: underline;
  }
  
  .main-page-link-wrapper:hover + .card-img-overlay .main-page-link {
    color: var(--secondary)!important;
    text-decoration: underline;
  }
  
  .main-page-link-wrapper:hover + .card-body .main-page-link {
    color: var(--secondary)!important;
    text-decoration: underline;
  }
  
  .main-page-link-wrapper:hover + .main-page-announcements-card .main-page-link {
    color: var(--secondary);
    text-decoration: underline;
  }
  
  .main-page-link-sub {
    position: relative;
    z-index: 5;
  }

  
  .journal-card-sub-title.main-page-subsection-title {
    text-align: left;
    font-size: 15px;
  }
  
  @media (min-width: 768px) {
    .main-page-section-icon {
      display: block!important;
    }
  }
  
  .main-page-section-icon {
    display: none!important;
    height: 100px;
    object-fit: contain;
  }
  
  @media (min-width: 992px) {
    .main-page-container {
      padding-left: 3em;
    }
  }
  
  @media (min-width: 768px) {
    .main-page-section-icon {
      display: block!important;
    }
  }
  
  @media (min-width: 768px) {
    .journal-card-sub-title.main-page-subsection-title {
      text-align: center;
    }
  }
  
  .main-page-link:hover {
    color: var(--secondary);
    cursor: pointer;
    text-decoration: underline;
  }
  
  .page-main-image {
    height: 200px;
    object-fit: contain;
  }
  
  .page-title {
    color: var(--primary);
  }
  
  @media (min-width: 992px) {
    .page-main-image {
      height: 300px;
    }
  }
  
  .page-date-text {
    color: var(--primary);
  }
  
  .page-desc {
    color: var(--primary);
  }
  
  .about-pres-image {
    width: 80px;
  }
  
  @media (min-width: 768px) {
    .about-pres-image {
      width: 120px;
    }
  }
  
  @media (min-width: 1200px) {
    .about-pres-image {
      width: 180px;
    }
  }
  
  .main-page-jumbo-logo {
    height: 100px;
  }
  
  .main-page-jumbo-logo {
    display: block;
  }
  
  @media (min-width: 576px) {
    .main-page-jumbo-logo {
      display: block;
    }
  }
  
  @media (min-width: 768px) {
    .main-page-jumbo-logo {
      height: 100px;
    }
  }


  .main-page-section-top-border {
    border-top-style: solid;
    border-top-color: rgba(51,102,103,0.36);
    border-bottom-color: #31cdd0;
  }
  
  .main-page-link.main-page-more-link {
    font-size: 14px;
  }

  @media (min-width: 1200px) {
    .navbar.fixed-top {
      padding-left: calc(10em)!important;
      padding-right: calc(10em)!important;
      max-width:1600px;
      margin:auto
    }
  }

  @media (min-width: 1200px) {
    .main-page-container {
      max-width:1600px;
      padding-left: 10em !important;
      padding-right: 10em !important;
    }
  }
/* ... */

